src/test/compile-fail/writing-to-immutable-rec.rs
// error-pattern: writing to immutable type
fn main() {
  let rec(int x) r = rec(x=1);
  r.x = 6;
}
